@startuml
title Lab 9 - Generics in Hotel Booking System

class Room {
  - int number
  - String type
  - double pricePerNight
  + getNumber(): int
  + getType(): String
  + getPricePerNight(): double
}

class Customer {
  - String name
  - String phone
  + getName(): String
  + getPhone(): String
}

class Reservation {
  - Room room
  - Customer customer
  - LocalDate checkInDate
  - LocalDate checkOutDate
  + getRoom(): Room
  + getCustomer(): Customer
  + getCheckInDate(): LocalDate
  + getCheckOutDate(): LocalDate
  + overlaps(Reservation other): boolean
}

class BookingLink<TCustomer, TRoom> {
  - TCustomer customer
  - TRoom room
  + getCustomer(): TCustomer
  + getRoom(): TRoom
}

class ReservationRecord<TReservation, TStatus> {
  - TReservation reservation
  - TStatus status
  + getReservation(): TReservation
  + getStatus(): TStatus
}

class BookingSchedule<TReservation extends Reservation> {
  - List<TReservation> reservations
  + addReservation(TReservation reservation): boolean
  + getReservations(): List<TReservation>
}

class BookingUtils {
  + {static} <T extends Comparable<T>> findMaximum(List<T> items): T
}

Customer "1" -- "many" Reservation
Room "1" -- "many" Reservation
ReservationRecord --> Reservation
BookingSchedule --> Reservation
BookingLink --> Customer
BookingLink --> Room

@enduml